# numbduck

./: CLAUDE.md  pyproject.toml
.github/workflows/: numbduck_ci.yml
numbduck/: ducklib.py  utils.py
test/: test_ducklib.py
