[build-system]
requires = ["setuptools~=75.3.0", "wheel~=0.45.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["numbox*"]

[project]
name = "numbduck"
dependencies = [
    "duckdb~=1.3.2",
    "numbox~=0.2.11",
    "numba<0.62.0",
]
dynamic = ["version"]
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["duckdb", "numba", "numpy"]
authors = [
  {name = "Mikhail Goykhman"}
]
readme = 'README.md'

[project.optional-dependencies]
docs = ["sphinx==8.1.3", "sphinx-sitemap==2.7.2", "sphinx_rtd_theme"]

[tool.setuptools.dynamic]
version = {attr = "numbduck.__version__"}
