[build-system]
requires = ["setuptools~=75.3.0", "wheel~=0.45.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["numbduck*"]

[project]
name = "numbduck"
dependencies = [
    "duckdb~=1.3.2",
    "llvmlite>=0.43.0,<0.46.0;python_version<'3.14'",
    "llvmlite==0.46.0rc1;python_version=='3.14'",
    "numbox==0.2.13",
    "numba>=0.60.0,<0.63.0;python_version<'3.14'",
    "numba==0.63.0rc1;python_version=='3.14'",
]
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["duckdb", "numba", "numpy"]
authors = [
  {name = "Mikhail Goykhman"}
]
readme = 'README.md'

[tool.setuptools.dynamic]
version = {attr = "numbduck.__version__"}
