[build-system]
requires = ["setuptools~=75.3.0", "wheel~=0.45.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["numbduck*"]

[project]
name = "numbduck"
dependencies = [
    "duckdb~=1.3.2",
    "numbox~=0.2.13"
]
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["duckdb", "numba", "numpy"]
authors = [
  {name = "Mikhail Goykhman"}
]
readme = 'README.md'

[tool.setuptools.dynamic]
version = {attr = "numbduck.__version__"}
